--- a/style.css
+++ b/style.css
@@ -1,26 +1,21 @@
-h1{
-    color: rgb(255, 166, 0);
-    background-color: rgb(60, 255, 0);
-    font-size: 60px;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    width: 650px;
-    text-align: center;
-}
 img{
     height: 500px;
 }
 .bd{
-    background-color: rgb(0, 183, 255);
+    background-color: rgb(121, 177, 190);
     font-size: 30px;
     padding: 10px 40px;
     width: 250px;
     text-align: center;
+    margin: 0 auto;
 }
 .num{
-    color: rgb(255, 0, 255);
+    color: rgb(255, 0, 119);
+    font-weight: bolder;
 }
 .b{
     color: rgb(255, 0, 0);
+    font-weight: bolder;
 }
 .border{
     border: 20px solid rgb(255, 0, 85);
@@ -33,8 +28,22 @@ img{
     display: inline-block;
 }
 .padding{
-    padding: 20px 40px
+    padding: 20px 40px;
+    color: rgb(0, 0, 0);
+    background-color: rgb(255, 238, 0);
+    font-size: 60px;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    width: 650px;
+    text-align: center;
+    margin: 0 auto;
+    margin-bottom: 50px;
+    margin-top: 30px;
 }
 .d90s{
     text-align: center;
+    
+}
+.d90sp{
+    text-align: center;
+    margin-top: 100px;
 }
