--- a/style.css
+++ b/style.css
@@ -38,7 +38,7 @@ img{
     margin: 0 auto;
     margin-bottom: 50px;
     margin-top: 30px;
-    font-weight: bolder;
+    font-weight: bold;
 }
 .d90s{
     text-align: center;
